--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "name": "event-dispatch-test",
+  "version": "1.0.0",
+  "description": "event dispatcher that decouples events and callbacks",
   "private": true,
   "scripts": {
-    "test": "./node_modules/jasmine-node/bin/jasmine-node --test-dir ./"
+    "test": "node ./node_modules/jasmine-node/bin/jasmine-node --test-dir ./"
   },
   "dependencies": {
+    "tsd": "^0.6.5"
   },
   "devDependencies": {
     "jasmine-core": "2.3.4",
